# StockNet_V2

./: .gitignore  GRAPH_QUALITY_AND_FINANCIAL_MEANING_PLAN.md  README.md  candidate_fix_test_report.md  metadata_trust_policy.json  package-lock.json  package.json  pyproject.toml  server.js
metadata/: symbol_metadata.parquet
runs/: run_month_cpu_only_dtw_aggressive_flat.bat  run_month_cpu_only_dtw_aggressive_flat_resume.bat  run_month_cpu_range.bat  run_month_cpu_resume.bat  run_year_2025_cpu.bat  stop_all_runs.bat
scripts/: __init__.py  benchmark_dtw_mode_5min.py  benchmark_qualification_architectures.py  benchmark_torch_dtw.py  build_graph_evaluation_pack.py  build_month_pack.py  compare_alpha_windows.py  ingest_trade_date_into_pack.py  materialize_features_1m.py  migrate_data_to_distributed_packs.py  refresh_symbol_metadata.py  run_distributed_month.py  run_graph_build_range.py  run_month_graph_compute.py  run_one_year_qualification.py  run_qualification_month_range.py  run_three_month_qualification.py  run_two_week_causality_safe_eval.py  validate_month_pack.py  watch_graph_build_chain.py  watch_stop_after_window.py
tests/: test_benchmark_dtw_backends.py  test_benchmark_qualification_architectures.py  test_cli_init_schema.py  test_cli_run_theme_discovery.py  test_cli_run_theme_discovery_duckdb.py  test_community_and_consensus.py  test_dtw_execution_service.py  test_dtw_similarity.py  test_dtw_torch.py  test_dtw_trade_flow_similarity.py  test_dtw_window.py  test_duckdb_market_read_repository.py  test_graph_build_chain_service.py  test_graph_build_range_service.py  (+30 more)
(+87 files in other folders)
